Updated from Leanne

--- a/Report-2025-W36.html
+++ b/Report-2025-W36.html
@@ -98,10 +98,9 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="individual-area-level">Individual area level</h2>
 <p>Table of two wastewater treatment plants : This graph is a visual of the SARS CoV-2 data for week 37 at national level and includes data for two treatment plants which are Oostende and Aalst Wastewater Treatment Works.<br>
 <embed src="./tbl_nation.csv" class="img-fluid"></p>
-<p>Number 1 - subset dates - subset sars and pmmv data based on labProtocolID used between date_graph_start and date_graph_end (“SC_COV_4.1”, “UA_COV_4.0”, “SC_PMMV_2.1”, “UA_PMMV_2.0”) - rename measure to SARS or PMMV only</p>
+<p>Number 1 - mariette</p>
 <p>Number 2 Carrie - data visuals</p>
 <p>Number 3 Mieke</p>
-<p>quarto::quarto_render(“04_quarto.qmd”)</p>
 </section>
 
 </main>
